--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "rifas-ven",
+  "name": "mister-winner",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "NODE_OPTIONS='--max-old-space-size=8192' next build --no-lint",
+    "build:with-lint": "NODE_OPTIONS='--max-old-space-size=8192' next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
@@ -12,6 +13,8 @@
     "format:fix": "prettier --write . && npm run lint --fix"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.5",
+    "@tanstack/react-table": "^8.21.3",
     "clsx": "^2.1.1",
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
